# api/swagger.yml
@@ -3,16 +3,25 @@ info:
   version: "1.0.0"
   title: "Hanoman Payment Xendit"
   description: "Hanoman Payment Xendit"
-host: "virtserver.swaggerhub.com"
+host: "localhost:8080"
 
 schemes:
   - "http"
 
+securityDefinitions:  
+   Bearer:    
+     type: apiKey    
+     name: Authorization    
+     in: header
+
 tags:
   - name: "Health"
     description: "Every request and response about Health Check"
+  - name: "Auth"
+    description: "Every request and response about Auth"
+
 paths:
-  /health:
+  /redirect:
     get:
       summary: "Health check"
       description: "Health check endpoint"
@@ -20,40 +29,38 @@ paths:
         - "Health"
       produces:
         - "application/json"
+      parameters:
+        - name: access_token
+          type: string
+          in: query
+          description: Tags to filter by
+          required: true
       responses:
         "200":
           description: "Success"
           schema:
             type: object
             properties:
-              message:
+              access_token:
                 type: "string"
                 description: "success retrieve data"
                 example: "app running well"
-              data:
-                type: object
-                $ref: "#/definitions/Health"
         "400":
           $ref: "#/responses/BadRequest"
         "401":
           $ref: "#/responses/BadRequest"
         "404":
-          $ref: "#/responses/NotFound"
-
-  /making-payments:
+          $ref: "#/responses/NotFound"  
+  /welcome:
     get:
-      summary: "Success retrieve onboarding progress"
-      description: "Success retrieve onboarding progress"
+      summary: "Health check"
+      description: "Health check endpoint"
       tags:
-        - "Payment"
+        - "Health"
       produces:
         - "application/json"
-      parameters:
-        - in: query
-          name: bank_code
-          type: string
-          required: true
-          description: The filter search by name.
+      security:
+       - Bearer: []
       responses:
         "200":
           description: "Success"
@@ -64,18 +71,106 @@ paths:
                 type: "string"
                 description: "success retrieve data"
                 example: "app running well"
-              data:
-                type: object
-                $ref: "#/definitions/MakingPayment"
         "400":
           $ref: "#/responses/BadRequest"
         "401":
           $ref: "#/responses/BadRequest"
         "404":
           $ref: "#/responses/NotFound"
-        "500":
-          $ref: "#/responses/InternalServerError" 
-  
+  /create-otp:
+    post:
+      summary: "Add a new pet to the store"
+      description: "Health check endpoint"
+      tags:
+        - "Auth"
+      produces:
+      - "application/json"
+      parameters:
+      - in: "body"
+        name: "body"
+        description: "Pet object that needs to be added to the store"
+        required: true
+        schema:
+          type: object
+          properties: 
+            phone_number:
+              type: string
+              description: "user phone_number"
+              example: "081334702936"
+      responses:
+        "200":
+          description: "Success"
+          schema:
+            type: object
+            properties:
+              message:
+                type: "string"
+                description: "success retrieve data"
+                example: "Success"
+              data:
+                type: object
+                properties: 
+                  otp:
+                    type: string
+                    description: "user otp"
+                    example: "123456"
+        "400":
+          $ref: "#/responses/BadRequest"
+        "401":
+          $ref: "#/responses/BadRequest"
+        "404":
+          $ref: "#/responses/NotFound"
+  /validate-otp:
+    post:
+      summary: "Add a new pet to the store"
+      description: "Health check endpoint"
+      tags:
+        - "Auth"
+      produces:
+      - "application/json"
+      parameters:
+      - in: "body"
+        name: "body"
+        description: "Pet object that needs to be added to the store"
+        required: true
+        schema:
+          type: object
+          properties: 
+            phone_number:
+              type: string
+              description: "user phone_number"
+              example: "081334702936"
+            otp:
+              type: string
+              description: "user otp"
+              example: "123456"
+      responses:
+        "200":
+          description: "Success"
+          schema:
+            type: object
+            properties:
+              message:
+                type: "string"
+                description: "success retrieve data"
+                example: "Success"
+              data:
+                type: object
+                properties: 
+                  user:
+                    type: string
+                    description: "user otp"
+                    example: "081334702936"
+                  access_token:
+                    type: string
+                    description: "user otp"
+                    example: ""
+        "400":
+          $ref: "#/responses/BadRequest"
+        "401":
+          $ref: "#/responses/BadRequest"
+        "404":
+          $ref: "#/responses/NotFound"
 definitions:
   MakingPayment:
         type: array
