# internal/handler/payment.go
@@ -2,14 +2,22 @@ package handler
 
 import (
 	"context"
-	"hanoman-id/xendit-payment/internal/apis/operations/payment"
-	"hanoman-id/xendit-payment/internal/models"
+	"fmt"
+	"hanoman-id/xendit-payment/internal/apis/operations/health"
 )
 
-func (h *handler) GetMakingPayment(ctx context.Context, params payment.GetMakingPaymentsParams) (models.MakingPayment, error) {
-	res, err := h.useCase.GetMakingPayment(ctx, params)
-	if err != nil {
-		return nil, err
-	}
-	return *res, nil
+func (h *handler) GetWelcome(ctx context.Context, params health.GetWelcomeParams, principal interface{}) (health.GetWelcomeOKBody, error) {
+	id := principal.(map[string]interface{})["id"].(string)
+	name := principal.(map[string]interface{})["username"].(string)
+
+	res := fmt.Sprintf("Hai %s, ID anda adalah %s", name, id)
+	return health.GetWelcomeOKBody{
+		Message: res,
+	}, nil
+}
+
+func (h *handler) ReadirectToken(ctx context.Context, params health.GetRedirectParams) (health.GetRedirectOKBody, error) {
+	return health.GetRedirectOKBody{
+		AccessToken: params.AccessToken,
+	}, nil
 }
